--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -35,7 +35,7 @@ env:
   ECR_REPOSITORY: test-ecs          # set this to your Amazon ECR repository name
   ECS_SERVICE: test-ecs                 # set this to your Amazon ECS service name
   ECS_CLUSTER: test-ecs                # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: bob-test-ecs # set this to the path to your Amazon ECS task definition
+  ECS_TASK_DEFINITION: ecs_task_definition.json # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
   CONTAINER_NAME: bob-test-ecs:1          # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
